--- a/index.html
+++ b/index.html
@@ -35,29 +35,29 @@
 
       <div class="book">
         <img
-          src="https://images.cdn2.buscalibre.com/fit-in/360x360/ca/21/ca2172fc190516f831ee04d26910626a.jpg"
+          src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1605947244i/55973066.jpg"
         />
         <div>
-          <h6>Frank Herbert's Dune</h6>
-          <span
-            >I enjoy sci-fi... and star wars... and game of thrones. You get the
-            idea.</span
-          >
+          <h6>The Stranger (spanish edition) - Albert Camus</h6>
         </div>
       </div>
 
-      <div class="book">
-        <img
-          src="https://m.media-amazon.com/images/I/81+oMD7Lm7L._AC_UF1000,1000_QL80_.jpg"
-        />
-        <div>
-          <h6>Joe Reis & Matt Housley's Fundamentals of Data Engineering</h6>
-          <span
-            >Yeah this is a spoiler of my career shift in a few years. I just
-            hope it keeps being such a nice engineering field.</span
-          >
-        </div>
+      <h3>Read</h3>
+
+      <div>
+        <a
+          href="https://www.goodreads.com/review/show/7017533041"
+          target="_blank"
+        >
+          Dune - Frank Herbert
+        </a>
       </div>
+      <a
+        href="https://www.goodreads.com/review/list/183786415-waldo-sobrino"
+        target="_blank"
+      >
+        View all my reviews
+      </a>
 
       <h2>Miscellaneous</h2>
       <div class="misc">
@@ -91,7 +91,7 @@
       </div>
     </main>
 
-    <footer>
+    <footer style="padding-top: 2rem">
       <span>
         <a href="mailto:hey@waasabi.co" target="_blank"> Email </a>
       </span>
