--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Waldo Sobrino's personal website - Systems Engineer, thoughts on technology, life, and personal growth"
+    />
 
     <link rel="icon" type="image/svg+xml" href="./assets/pfp.png" />
     <link rel="stylesheet" href="./styles.css" />
 
     <title>waasabi</title>
+
+    <!-- Preload critical assets -->
+    <link rel="preload" href="./assets/logo.gif" as="image" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <header>
-      <img src="./assets/logo.gif" class="h-4 w-4" />
+      <img src="./assets/logo.gif" alt="Waasabi Logo" class="h-4 w-4" />
       <h1>Waldo Sobrino</h1>
       <h2><a href="index.html">waasabi.co</a></h2>
     </header>
@@ -36,6 +45,7 @@
       <div class="book">
         <img
           src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1605947244i/55973066.jpg"
+          alt="The Stranger by Albert Camus"
         />
         <div>
           <h6>The Stranger (spanish edition) - Albert Camus</h6>
@@ -108,5 +118,16 @@
         <a href="https://github.com/waldo2810" target="_blank"> Github </a>
       </span>
     </footer>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Waldo Sobrino",
+        "jobTitle": "Systems Engineer",
+        "url": "https://waasabi.co",
+        "sameAs": ["https://x.com/waasabi_co", "https://github.com/waldo2810"]
+      }
+    </script>
   </body>
 </html>
