--- a/index.html
+++ b/index.html
@@ -44,17 +44,23 @@
 
       <div class="book">
         <img
-          src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1605947244i/55973066.jpg"
-          alt="The Stranger by Albert Camus"
+          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1719607310l/203141661._SY475_.jpg"
+          alt="Cien años de soledad"
         />
         <div>
-          <h6>The Stranger (spanish edition) - Albert Camus</h6>
+          <h6>Cien años de soledad - Gabriel García Marquez</h6>
         </div>
       </div>
 
       <h3>Read</h3>
 
-      <div>
+      <div style="font-weight: 400">
+        <a
+          href="https://www.goodreads.com/review/show/7024638510"
+          target="_blank"
+        >
+          The Stranger - Albert Camus
+        </a>
         <a
           href="https://www.goodreads.com/review/show/7017533041"
           target="_blank"
