--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         >
           The Stranger - Albert Camus
         </a>
+    </div>
+      <div style="font-weight: 400">
         <a
           href="https://www.goodreads.com/review/show/7017533041"
           target="_blank"
