add book review

--- a/index.html
+++ b/index.html
@@ -42,17 +42,28 @@
       <h2>Me Now</h2>
       <h3>Currently reading</h3>
 
-      <div class="book">
-        <img
-          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1719607310l/203141661._SY475_.jpg"
-          alt="Cien años de soledad"
-        />
-        <div>
-          <h6>Cien años de soledad - Gabriel García Marquez</h6>
-        </div>
-      </div>
+      <span>...</span>
+
+      <!--<div class="book">-->
+      <!--  <img-->
+      <!--    src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1719607310l/203141661._SY475_.jpg"-->
+      <!--    alt="Cien años de soledad"-->
+      <!--  />-->
+      <!--  <div>-->
+      <!--    <h6>Cien años de soledad - Gabriel García Marquez</h6>-->
+      <!--  </div>-->
+      <!--</div>-->
 
       <h3>Read</h3>
+
+      <div style="font-weight: 400">
+        <a
+          href="https://www.goodreads.com/review/show/7060260714"
+          target="_blank"
+        >
+          Cien años de soledad - Gabriel García Marquez
+        </a>
+      </div>
 
       <div style="font-weight: 400">
         <a
