--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
       <h2>Me Now</h2>
       <h3>Currently reading</h3>
 
-      <span>...</span>
-
-      <!--<div class="book">-->
-      <!--  <img-->
-      <!--    src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1719607310l/203141661._SY475_.jpg"-->
-      <!--    alt="Cien años de soledad"-->
-      <!--  />-->
-      <!--  <div>-->
-      <!--    <h6>Cien años de soledad - Gabriel García Marquez</h6>-->
-      <!--  </div>-->
-      <!--</div>-->
+      <div class="book">
+        <img
+          src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1431279098l/25516857.jpg"
+          alt="Brothers Karamazov"
+        />
+        <div>
+          <h6>Brothers Karamazov - Fyodor Dostoyevski</h6>
+        </div>
+      </div>
 
       <h3>Read</h3>
 
